template/style.css
@font-face {
    font-family: "myfont";
    src: local("MY_FONT");
}

* {
    box-sizing: border-box;
    font: TEXT_SIZE "myfont";
    color: purple;
    z-index: 0;
}

body {
    margin: 0;
    width: 210mm;
    height: 297mm;
}

page {
    width: PAGE_WIDTH;
    height: PAGE_HEIGHT;
    background: white;
    display: block;
    border-width: PAGE_BORDER_SIZE;
}

page[side=left] {
    margin-left: PAGE_ALTERNATE_MARGIN;
    padding: PAGE_MARGIN_TOP PAGE_MARGIN_INNER PAGE_MARGIN_BOT PAGE_MARGIN_OUTER;
    border-style: none PAGE_ALTERNATE_BORDER;
}

page[side=right] {
    margin-right: PAGE_ALTERNATE_MARGIN;
    padding: PAGE_MARGIN_TOP PAGE_MARGIN_OUTER PAGE_MARGIN_BOT PAGE_MARGIN_INNER;
    border-style: none solid solid none;
}

week {
    width: 100%;
    height: 100%;
    display: grid;
    grid-template-areas:
        "title box"
        "cell_11 cell_12"
        "cell_21 cell_22"
        "cell_31 cell_32";
    grid-template-columns: repeat(2, 50%);
    grid-template-rows: repeat(4, 25%);

    week-title {
        grid-area: title;
        margin: SPACE_WEEK_TITLE_TOP 0 0 SPACE_WEEK_TITLE_LEFT;
        font-size: WEEK_TITLE_SIZE;
    }

    cell {
        border-width: LINE_SIZE;
        margin: 0;
        padding: SPACE_WEEK_CELL_TOP 0 0 SPACE_WEEK_CELL_LEFT;
    }

    cell collumn-title{
        display: table;
        z-index: 1;
        margin-left: auto;
        margin-right: auto;
        margin-top: calc(-6% - SPACE_WEEK_CELL_TOP);
        margin-bottom: calc(1% + SPACE_WEEK_CELL_TOP - TEXT_SIZE);
        background-color: white;
    }

    cell[type=box] {
        grid-area: box;
        border-style: solid;
        margin: SPACE_BOX_CELL_TOP SPACE_BOX_CELL_RIGHT SPACE_BOX_CELL_BOT SPACE_BOX_CELL_LEFT;
    }

    cell[type=c11] {
        grid-area: cell_11;
        border-style: solid none solid none;
    }

    cell[type=c12] {
        grid-area: cell_12;
        border-style: solid none solid dashed;
    }

    cell[type=c21] {
        grid-area: cell_21;
        border-style: solid none solid none;
        margin: -LINE_SIZE 0 0 0;
    }

    cell[type=c22] {
        grid-area: cell_22;
        border-style: solid none solid dashed;
        margin: -LINE_SIZE 0 0 0;
    }

    cell[type=c31] {
        grid-area: cell_31;
        border-style: solid none none none;
        margin: -LINE_SIZE 0 0 0;
    }

    cell[type=c32] {
        grid-area: cell_32;
        border-style: solid none none dashed;
        margin: -LINE_SIZE 0 0 0;
    }

    cell[type=c32_solidleft] {
        grid-area: cell_32;
        border-style: solid none none solid;
        margin: -LINE_SIZE 0 0 0;
    }
}


month-title {
    display: table;
    font-size: MONTH_TITLE_SIZE;
    margin: SPACE_MONTH_TITLE_TOP auto 0 auto;
}

month {
    height: clamp(0%, MONTH_GRID_HEIGHT, 100% - SPACE_MONTH_TITLE_TOP - MONTH_TITLE_SIZE - SPACE_MONTH_GRID_TOP);
    display: grid;
    grid-template-rows: repeat(NB_WEEKS_MONTH, auto);
    grid-template-columns: repeat(7, auto);
    padding: SPACE_MONTH_GRID_TOP SPACE_MONTH_GRID_RIGHT SPACE_MONTH_GRID_BOT SPACE_MONTH_GRID_LEFT;

    cell {
        border: LINE_SIZE solid;
        font-size: MONTH_GRID_SIZE;
        padding: SPACE_MONTH_CELL_TOP 0 0 SPACE_MONTH_CELL_LEFT;
        margin: -LINE_SIZE -LINE_SIZE 0 0;
    }
}

